# harmony-7zip

./: build-profile.json5  final_analysis.cpp  napi_init.cpp  replace_colors.py  test_analysis.cpp  test_archive_name.cpp  test_parse.cpp  test_scenarios.cpp
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/p7zip-17.05/CPP/7zip/CMAKE/7za/: CMakeLists.txt
entry/src/main/cpp/p7zip-17.05/CPP/7zip/CMAKE/Format7zFree/: CMakeLists.txt
entry/src/main/cpp/p7zip-17.05/CPP/7zip/UI/Console/: MainAr.cpp
entry/src/main/cpp/p7zip-17.05/CPP/myWindows/: config.h  mySplitCommandLine.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/: 修复index.ets的编译警告-20260424.md
entry/src/main/ets/components/: FileGridCell.ets  FileRow.ets  UiComponents.ets
entry/src/main/ets/managers/: ArchiveManager.ets  FileManager.ets
entry/src/main/ets/models/: FileItem.ets
entry/src/main/ets/pages/: Index.ets  Index.ets.backup.ets  Index_backup.ets  Index_backup2.ets
entry/src/main/ets/types/: abilityAccessCtrl.d.ts  permissions.d.ts  types.ets  types.ts
entry/src/main/ets/utils/: FileTypeUtil.ets  ToastUtil.ets
entry/src/main/ets/workers/: archive.worker.ts
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/dark/element/: color.json
